Fix link card list spacing and handle overflow

--- a/src/components/ProductLandingPage/Cards/Card.scss
+++ b/src/components/ProductLandingPage/Cards/Card.scss
@@ -92,8 +92,8 @@
 // LinkCard Styling 
 .link-card-container {
   transition: 300ms;
-  max-width: 425px;
-  height: 275px;
+  max-width: 450px;
+  max-height: 400px;
   background-color: #1D1E1F;
   padding: 2rem;
   border-radius: 0.5rem;
@@ -105,5 +105,9 @@
     height: 100%;
   }
 
-  .link-card__list { padding-left: 0; }
+  .link-card__list {
+    max-height: 200px;
+    overflow-y: scroll;
+    padding-left: 0; 
+  }
 }
