--- a/src/components/ProductLandingPage/UseCases/UseCases.scss
+++ b/src/components/ProductLandingPage/UseCases/UseCases.scss
@@ -32,7 +32,12 @@
     h3 { color: white; }
     li {
       list-style: none;
-      a { color: #dbdbdc }
+      line-height: 1.35;
+      margin: 0.75rem 0;
+      a {
+        color: #dbdbdc;
+        &:hover { font-weight: bold }
+      }
     }
   }
 }
